syntax = "proto3";
package ibc.lightclients.corda.v1;

option go_package = "github.com/cosmos/cosmos-sdk/x/ibc/light-clients/xx-corda/types";

import "ibc/lightclients/corda/v1/corda-types.proto";

service QueryService {
  rpc QueryHost (QueryHostRequest) returns (Host);
  rpc QueryBank (QueryBankRequest) returns (Bank);
}

message QueryHostRequest {}
message QueryBankRequest {}

message Host {
  message PortChannelIdentifier {
    string portId = 1;
    string channelId = 2;
  }
  repeated Party participants = 1;
  StateRef base_id = 2;
  Party notary = 3;
  repeated string client_ids = 4;
  repeated string conn_ids = 5;
  repeated PortChannelIdentifier port_chan_ids = 6;
  string id = 7;
}

message Bank {
  message BalanceMapPerDenom {
    map<string, string> pubkeyToAmount = 1;
  }

  message BalanceMap {
    map<string, BalanceMapPerDenom> denomToMap = 1;
  }

  message IbcDenomMap {
    map<string, string> ibcDenomToDenom = 1;
  }

  repeated Party participants = 1;
  StateRef baseId = 2;
  BalanceMap allocated = 3;
  BalanceMap locked = 4;
  BalanceMap minted = 5;
  IbcDenomMap denoms = 6;
  string id = 7;
}
